TSK-8179 -- стало слишком много изменений, EMCHD

--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.FIO_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.FIO_CL.adoc
@@ -18,8 +18,8 @@ public class FIO
 |===
 |Имя |Описание
 
-|`LastName` |Фамилия (Обязательный)
-|`FirstName` |Имя (Обязательный)
-|`MiddleName` |Отчество
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[LastName]` |Фамилия (Обязательный)
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[FirstName]` |Имя (Обязательный)
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[MiddleName]` |Отчество
 
 |===
