--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.ForeignCompanyInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.ForeignCompanyInfo_CL.adoc
@@ -18,9 +18,9 @@ public class ForeignCompanyInfo
 |===
 |Имя |Описание
 
-|`Name` |Наименование иностранной организации (Обязательный).
-|`Inn` |ИНН организации (Обязательный).
-|`Kpp` |КПП обособленного подразделения (Обязательный).
-|`Manager` |Сведения о руководителе обособленного подразделения  (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Name]` |Наименование иностранной организации (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]` |ИНН организации (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Kpp]` |КПП обособленного подразделения (Обязательный).
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.SeparateSubdivisionManagerInfo_CL.adoc[Manager]` |Сведения о руководителе обособленного подразделения  (Обязательный).
 
 |===
