--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.IdentityCardInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.IdentityCardInfo_CL.adoc
@@ -19,9 +19,9 @@ public class IdentityCardInfo
 |Имя |Описание
 
 |`DocumentKindCode` |Код вида документа (Обязательный).
-|`DocumentSerialNumber` |Серия и номер документа (Обязательный).
-|`IssueDate` |Дата выдачи документа (Обязательный).
-|`Issuer` |Наименование органа, выдавшего документ (Обязательный с условием). Обязательный, если вид документа -- Паспорт гражданина Российской Федерации.
-|`IssuerCode` |Код подразделения органа, выдавшего документ.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[DocumentSerialNumber]` |Серия и номер документа (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[IssueDate]` |Дата выдачи документа (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Issuer]` |Наименование органа, выдавшего документ (Обязательный с условием). Обязательный, если вид документа -- Паспорт гражданина Российской Федерации.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[IssuerCode]` |Код подразделения органа, выдавшего документ.
 
 |===
