--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.IndividualInfo1_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.IndividualInfo1_CL.adoc
@@ -18,11 +18,11 @@ public class IndividualInfo1
 |===
 |Имя |Описание
 
-|`Inn` | ИНН физического лица.
-|`Snils` |СНИЛС (Обязательный).
-|`Ogrnip` |ОГРНИП.
-|`Citizenship` |Гражданство. Принимает значение в соответствии с Общероссийским классификатором стран мира.
-|`BirthDate` |Дата рождения (Обязательный).
-|`IdentityCard` |Сведения о документе, удостоверяющем личность физического лица (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]` | ИНН физического лица.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Snils]` |СНИЛС (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Ogrnip]` |ОГРНИП.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Citizenship]` |Гражданство. Принимает значение в соответствии с Общероссийским классификатором стран мира.
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[BirthDate]` |Дата рождения (Обязательный).
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.IdentityCardInfo_CL.adoc[IdentityCard]` |Сведения о документе, удостоверяющем личность физического лица (Обязательный).
 
 |===
