--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.OrganizationInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.OrganizationInfo_CL.adoc
@@ -18,9 +18,9 @@ public class OrganizationInfo
 |===
 |Имя |Описание
 
-|`Name` |Наименование организации / Наименование обособленного подразделения организации (Обязательный)
-|`Inn` |ИНН организации (Обязательный)
-|`Kpp` |КПП организации (Обязательный)
-|`Ogrn` |ОГРН
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Name]` |Наименование организации / Наименование обособленного подразделения организации (Обязательный)
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]` |ИНН организации (Обязательный)
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Kpp]` |КПП организации (Обязательный)
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Ogrn]` |ОГРН
 
 |===
