--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.PowerOfAttorneyInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.PowerOfAttorneyInfo_CL.adoc
@@ -18,7 +18,7 @@ public class PowerOfAttorneyInfo
 |===
 |Имя |Описание
 
-|`Organization` |Сведения об организации (Обязательный с условием). Обязательный, если в доверенности в качестве уполномоченного представителя указано юридическое лицо.
-|`Individual` |Сведения о физическом лице, в том числе индивидуальном предпринимателе (Обязательный). Указываются сведения об уполномоченном представителе - физическом лице, в отношении которого отзывается доверенность.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.OrganizationInfo_CL.adoc[Organization]` |Сведения об организации (Обязательный с условием). Обязательный, если в доверенности в качестве уполномоченного представителя указано юридическое лицо.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.IndividualInfo_CL.adoc[Individual]` |Сведения о физическом лице, в том числе индивидуальном предпринимателе (Обязательный). Указываются сведения об уполномоченном представителе - физическом лице, в отношении которого отзывается доверенность.
 
 |===
