--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.PrincipalInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.PrincipalInfo_CL.adoc
@@ -18,9 +18,9 @@ public class PrincipalInfo
 |===
 |Имя |Описание
 
-|`RussianCompany` |Сведения о российской организации (Обязательный с условием). Обязательный при отзыве основной доверенности, если доверителем является российская организация.
-|`ForeignCompany` |Сведения об иностранной организации (Обязательный с условием). Обязательный при отзыве основной доверенности, если доверителем является иностранная организация.
-|`Individual` |Сведения о физическом лице (Обязательный с условием). Обязательный при отзыве основной доверенности, если доверителем является физическое лицо.
-|`RetrustPrincipal` |Сведения о доверителе при отзыве доверенности, совершенной (выданной) в порядке передоверия (Обязательный с условием). Обязательный, если производится отзыв доверенности, совершенной (выданной) в порядке передоверия полномочий.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.RussianCompanyInfo_CL.adoc[RussianCompany]` |Сведения о российской организации (Обязательный с условием). Обязательный при отзыве основной доверенности, если доверителем является российская организация.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.ForeignCompanyInfo_CL.adoc[ForeignCompany]` |Сведения об иностранной организации (Обязательный с условием). Обязательный при отзыве основной доверенности, если доверителем является иностранная организация.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.IndividualInfo_CL.adoc[Individual]` |Сведения о физическом лице (Обязательный с условием). Обязательный при отзыве основной доверенности, если доверителем является физическое лицо.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.RetrustPrincipalInfo_CL.adoc[RetrustPrincipal]` |Сведения о доверителе при отзыве доверенности, совершенной (выданной) в порядке передоверия (Обязательный с условием). Обязательный, если производится отзыв доверенности, совершенной (выданной) в порядке передоверия полномочий.
 
 |===
