--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.PrincipalWithoutPowerOfAttorneyInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.PrincipalWithoutPowerOfAttorneyInfo_CL.adoc
@@ -19,6 +19,6 @@ public class PrincipalWithoutPowerOfAttorneyInfo
 |Имя |Описание
 
 |`Position` |Должность (Обязательный).
-|`Organization` |Сведения об организации (Обязательный с условием). Обязательный, если лицом, действующим от имени юридического лица, является организация.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.OrganizationInfo_CL.adoc[Organization]` |Сведения об организации (Обязательный с условием). Обязательный, если лицом, действующим от имени юридического лица, является организация.
 
 |===
