--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.RetrustPrincipalInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.RetrustPrincipalInfo_CL.adoc
@@ -19,7 +19,7 @@ public class RetrustPrincipalInfo
 |===
 |Имя |Описание
 
-|`Organization` |Сведения об организации (Обязательный с условием). Обязательный, если доверитель в порядке передоверия действует от имени юридического лица.
-|`Individual` |Сведения по физическому лицу (Обязательный). Указываются сведения о физическом лице (в том числе, когда в доверенности в качестве доверителя в порядке передоверия указано юридическое лицо) или индивидуальном предпринимателе.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.OrganizationInfo_CL.adoc[Organization]` |Сведения об организации (Обязательный с условием). Обязательный, если доверитель в порядке передоверия действует от имени юридического лица.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.IndividualInfo_CL.adoc[Individual]` |Сведения по физическому лицу (Обязательный). Указываются сведения о физическом лице (в том числе, когда в доверенности в качестве доверителя в порядке передоверия указано юридическое лицо) или индивидуальном предпринимателе.
 
 |===
