--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.RevocationDocument_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.RevocationDocument_CL.adoc
@@ -18,9 +18,9 @@ public class RevocationDocument
 |===
 |Имя |Описание
 
-|`TaxAuthorityCode` |Код налогового органа, в который представляется доверенность, созданная в электронной форме (Обязательный)
-|`Revocation` |Сведения заявления об отзыве доверенности (Обязательный)
-|`Principal` |Сведения о доверителе (Обязательный). Сведения о лице, доверявшем представителю выступать от своего имени в отношениях, регулируемых законодательством Российской Федерации о налогах и сборах.
-|`Signer` |Сведения о физическом лице, подписывающем заявление об отзыве доверенности от имени доверителя (российской организации / иностранной организации) без доверенности, или сведения о физическом лице, подписывающем заявление об отзыве доверенности от своего имени, в том числе при передаче полномочий другому лицу в порядке передоверия (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[TaxAuthorityCode]` |Код налогового органа, в который представляется доверенность, созданная в электронной форме (Обязательный)
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.RevocationInfo_CL.adoc[Revocation]` |Сведения заявления об отзыве доверенности (Обязательный)
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.PrincipalInfo_CL.adoc[Principal]` |Сведения о доверителе (Обязательный). Сведения о лице, доверявшем представителю выступать от своего имени в отношениях, регулируемых законодательством Российской Федерации о налогах и сборах.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.SignerInfo_CL.adoc[Signer]` |Сведения о физическом лице, подписывающем заявление об отзыве доверенности от имени доверителя (российской организации / иностранной организации) без доверенности, или сведения о физическом лице, подписывающем заявление об отзыве доверенности от своего имени, в том числе при передаче полномочий другому лицу в порядке передоверия (Обязательный).
 
 |===
