--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.RevocationInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.RevocationInfo_CL.adoc
@@ -18,10 +18,10 @@ public class RevocationInfo
 |===
 |Имя |Описание
 
-|`PowerOfAttorneyNumber` |Единый регистрационный номер доверенности (Обязательный).
-|`InternalPowerOfAttorneyNumber` |Номер доверенности (Обязательный). Внутренний номер доверенности.
-|`PowerOfAttorneyStartDate` |Дата совершения (выдачи) доверенности (Обязательный).
-|`RevocationDate` |Дата отзыва доверенности (Обязательный).
-|`RevocationReason` |Причина отзыва доверенности. При отзыве доверенности в отношении всех уполномоченных представителей не заполняется.
+|`http://msdn.microsoft.com/ru-ru/library/system.guid.aspx[PowerOfAttorneyNumber]` |Единый регистрационный номер доверенности (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[InternalPowerOfAttorneyNumber]` |Номер доверенности (Обязательный). Внутренний номер доверенности.
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[PowerOfAttorneyStartDate]` |Дата совершения (выдачи) доверенности (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[RevocationDate]` |Дата отзыва доверенности (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[IRevocationReason]` |Причина отзыва доверенности. При отзыве доверенности в отношении всех уполномоченных представителей не заполняется.
 
 |===
