--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.SeparateSubdivisionManagerInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.SeparateSubdivisionManagerInfo_CL.adoc
@@ -18,7 +18,7 @@ public class SeparateSubdivisionManagerInfo
 |===
 |Имя |Описание
 
-|`Inn` |ИНН физического лица - руководителя обособленного подразделения.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]` |ИНН физического лица - руководителя обособленного подразделения.
 |`CitizenshipType` |Признак наличия гражданства (Обязательный).
 
 |===
