--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.SignerInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.SignerInfo_CL.adoc
@@ -18,7 +18,7 @@ public class SignerInfo
 |===
 |Имя |Описание
 
-|`Phone` |Номер контактного телефона.
-|`Fio` |Фамилия, имя, отчество (при наличии) руководителя организации (обособленного подразделения) -– доверителя, физического лица -– доверителя (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[IPhone]` |Номер контактного телефона.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[IFio]` |Фамилия, имя, отчество (при наличии) руководителя организации (обособленного подразделения) -– доверителя, физического лица -– доверителя (Обязательный).
 
 |===
