--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyMainInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyMainInfo_CL.adoc
@@ -19,24 +19,24 @@ public sealed class PowerOfAttorneyMainInfo : BaseCardSectionRow
 |Имя |Описание
 
 |`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyStatus_EN.adoc[Status]` |Статус доверенности.
-|`UserCard` |Пользовательская карточка доверенности.
-|`Signer` |Подписант.
-|`PowerOfAttorneyStartDate` |Дата совершения доверенности.
-|`PowerOfAttorneyEndDate` |Срок действия доверенности.
-|`PowerOfAttorneyNumber` |Номер доверенности.
+|`http://msdn.microsoft.com/ru-ru/library/system.guid.aspx[UserCard]` |Пользовательская карточка доверенности.
+|`xref:BackOffice-ObjectModel-Staff:StaffEmployee_CL.adoc[Signer]` |Подписант.
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[PowerOfAttorneyStartDate]` |Дата совершения доверенности.
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[PowerOfAttorneyEndDate]` |Срок действия доверенности.
+|`http://msdn.microsoft.com/ru-ru/library/system.guid.aspx[PowerOfAttorneyNumber]` |Номер доверенности.
 |`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneySignatureFormat_EN.adoc[SignatureFormat]` |Формат подписи.
-|`MachineReadablePowerOfAttorney` |Машиночитаемая доверенность.
-|`PowerOfAttorneyFormat` |Формат МЧД.
-|`Signature` |Подпись.
-|`Principal` |Доверитель.
-|`PrincipalINN` |ИНН доверителя.
-|`ParentalPowerOfAttorney` |Родительская доверенность.
-|`RevocationRequestDate` |Дата и время поступления заявления на отзыв.
-|`RevocationDate` |Дата отзыва.
+|`http://msdn.microsoft.com/ru-ru/library/system.byte.aspx[MachineReadablePowerOfAttorney]` |Машиночитаемая доверенность.
+|`xref:BackOffice-ObjectModel-Powers:PowersPowerOfAttorneyFormat_CL.adoc[PowerOfAttorneyFormat]` |Формат МЧД.
+|`http://msdn.microsoft.com/ru-ru/library/system.byte.aspx[Signature]` |Подпись.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Principal]` |Доверитель.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[PrincipalINN]` |ИНН доверителя.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorney_CL.adoc[ParentalPowerOfAttorney]` |Родительская доверенность.
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[RevocationRequestDate]` |Дата и время поступления заявления на отзыв.
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[RevocationDate]` |Дата отзыва.
 |`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRegTransferStatuses_EN.adoc[RegTransferStatus]` |Статус передачи в реестр.
 |`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentative_CL.adoc[Representative]` |Представитель.
-|`RevocationApplication` |Заявление на отзыв доверенности.
-|`RevocationApplicationSignature` |Подпись заявления на отзыв доверенности.
+|`http://msdn.microsoft.com/ru-ru/library/system.byte.aspx[RevocationApplication]` |Заявление на отзыв доверенности.
+|`http://msdn.microsoft.com/ru-ru/library/system.byte.aspx[RevocationApplicationSignature]` |Подпись заявления на отзыв доверенности.
 |===
 
 == Поля
@@ -45,7 +45,7 @@ public sealed class PowerOfAttorneyMainInfo : BaseCardSectionRow
 |===
 |Имя |Описание
 
-|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyStatus_EN.adoc[StatusProperty]` |Определяет свойство "Статус доверенности".
+|`StatusProperty` |Определяет свойство "Статус доверенности".
 |`UserCard` |Определяет свойство "Пользовательская карточка доверенности".
 |`SignerProperty` |Определяет свойство "Подписант".
 |`PowerOfAttorneyStartDateProperty` |Определяет свойство "Дата совершения доверенности".
