--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyRepresentative_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyRepresentative_CL.adoc
@@ -18,8 +18,8 @@ public sealed class PowerOfAttorneyRepresentative: BaseCardSectionRow
 |===
 |Имя |Описание
 
-|`Individual` |Представитель физическое лицо (сотрудник из справочника сотрудников).
-|`Organization` |Представитель юридическое лицо (организация, индивидуальный предприниматель).
+|`xref:BackOffice-ObjectModel-Staff:StaffEmployee_CL.adoc[Individual]` |Представитель физическое лицо (сотрудник из справочника сотрудников).
+|`xref:BackOffice-ObjectModel-Staff:StaffUnit_CL.adoc[Organization]` |Представитель юридическое лицо (организация, индивидуальный предприниматель).
 |===
 
 == Поля
