--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyRepresentativesPowers_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyRepresentativesPowers_CL.adoc
@@ -18,8 +18,8 @@ public sealed class PowerOfAttorneyRepresentativesPowers : BaseCardSectionRow
 |===
 |Имя |Описание
 
-|`PowersCode` |Код полномочий.
-|`PowersDescription` |Текстовое описание полномочий.
+|`xref:BackOffice-ObjectModel-Powers:PowersCode_CL.adoc[PowersCode]` |Код полномочий.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[PowersDescription]` |Текстовое описание полномочий.
 |===
 
 == Поля
