--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyRevocationApplicantInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyRevocationApplicantInfo_CL.adoc
@@ -18,34 +18,34 @@ public sealed class PowerOfAttorneyRevocationApplicantInfo
 |===
 |Имя |Описание
 
-|`ApplicantType`
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRevocationApplicantType_EN.adoc[ApplicantType]`
 |Тип заявителя
 
-|`Name`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Name]`
 |Название организации (ИП) заявителя
 
-|`Inn`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]`
 |ИНН заявителя
 
-|`Kpp`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Kpp]`
 |КПП заявителя
 
-|`Ogrn`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Ogrn]`
 |ОГРН заявителя
 
-|`Snils`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Snils]`
 |СНИЛС физического лица-заявителя
 
-|`LastName`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[LastName]`
 |Фамилия физического лица-заявителя
 
-|`FirstName`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[FirstName]`
 |Имя физического лица-заявителя
 
-|`MiddleName`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[MiddleName]`
 |Отчество физического лица-заявителя
 
-|`Phone`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Phone]`
 |Контактный телефон
 
 |===
