--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyRevocationData_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyRevocationData_CL.adoc
@@ -19,6 +19,6 @@ public class PowerOfAttorneyRevocationData
 |Имя |Описание
 
 |`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRevocationType_EN.adoc[RevocationType]` |Тип заявления на отзыв
-|`RevocationReason` |Причина отзыв
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[RevocationReason]` |Причина отзыв
 |`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRevocationApplicantInfo_CL.adoc[ApplicantInfo]` |Информация о заявителе отзыва
 |===
