--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyRevocationInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyRevocationInfo_CL.adoc
@@ -18,5 +18,5 @@ public class PowerOfAttorneyRevocationInfo
 |===
 |Имя |Описание
 
-|`PowerOfAttorneyRevocationFileID` |Идентификатор файла отзыва доверенности (имя файла без расширения)
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[PowerOfAttorneyRevocationFileID]` |Идентификатор файла отзыва доверенности (имя файла без расширения)
 |===
