--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneySubsidiaryPowersOfAttorney_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneySubsidiaryPowersOfAttorney_CL.adoc
@@ -12,6 +12,23 @@
 public sealed class PowerOfAttorneySubsidiaryPowersOfAttorney : BaseCardSectionRow
 ----
 
+== Методы
+
+[cols=",",options="header"]
+|===
+|Имя |Описание
+
+|`PowerOfAttorneySubsidiaryPowersOfAttorney()`
+|Инициализирует новый экземпляр класса `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneySubsidiaryPowersOfAttorney_CL.adoc[PowerOfAttorneySubsidiaryPowersOfAttorney]`
+
+|`PowerOfAttorneySubsidiaryPowersOfAttorney()`
+|Инициализирует новый экземпляр класса `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneySubsidiaryPowersOfAttorney_CL.adoc[PowerOfAttorneySubsidiaryPowersOfAttorney]`
+
+|`PowerOfAttorneySubsidiaryPowersOfAttorney(data)`
+|Инициализирует новый экземпляр класса `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneySubsidiaryPowersOfAttorney_CL.adoc[PowerOfAttorneySubsidiaryPowersOfAttorney]` с указанными данными
+
+|===
+
 == Свойства
 
 [cols=",",options="header"]
@@ -19,6 +36,7 @@ public sealed class PowerOfAttorneySubsidiaryPowersOfAttorney : BaseCardSectionR
 |Имя |Описание
 
 |`xref:BackOffice-ObjectModel-Powers:PowerOfAttorney_CL.adoc[PowerOfAttorney]` |Системная карточка дочерней доверенности.
+
 |===
 
 == Поля
