--- a/modules/BackOffice-ObjectModel-Powers/pages/PowersCode_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowersCode_CL.adoc
@@ -18,11 +18,13 @@ public class PowersCode : ObjectBase
 |===
 |Имя |Описание
 
-|`Name` |Имя кода полномочий.
-|`Description` |Текстовое описание кода полномочий.
-|`Code` |Код полномочий.
-|`CreationDate` |Дата создания кода.
-|`UpdateDate` |Дата обновления кода.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Name]` |Имя кода полномочий.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Description]` |Текстовое описание кода полномочий.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Code]` |Код полномочий.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Mnemonics]` |Мнемоника полномочия в реестре полномочий.
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[CreationDate]` |Дата создания кода.
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[UpdateDate]` |Дата обновления кода.
+|`http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[NotAvailable]` |Код недоступен.
 |===
 
 == Поля
@@ -34,6 +36,8 @@ public class PowersCode : ObjectBase
 |`NameProperty` |Определяет свойство "Имя кода полномочий".
 |`DescriptionProperty` |Определяет свойство "Описание кода полномочий".
 |`CodeProperty` |Определяет свойство "Код полномочий".
+|`MnemonicsProperty` |Определяет свойство "Мнемоника полномочия".
 |`CreationDateProperty` |Определяет свойство "Дата создания кода".
 |`UpdateDateProperty` |Определяет свойство "Дата обновления кода".
+|`NotAvailableProperty` |Определяет свойство "Код недоступен".
 |===
