--- a/modules/BackOffice-ObjectModel-Powers/pages/PowersGroup_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowersGroup_CL.adoc
@@ -18,11 +18,11 @@ public class PowersGroup : ObjectBase
 |===
 |Имя |Описание
 
-|`Name` |Имя кода полномочий.
-|`Code` |Код полномочий.
-|`Author` |Автор.
-|`NsiId` |Идентификатор составителя в ЕС НСИ
-|`Codes` |Коды.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Name]` |Имя кода полномочий.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Code]` |Код полномочий.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Author]` |Автор.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[NsiId]` |Идентификатор составителя в ЕС НСИ
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Codes]` |Коды.
 |===
 
 == Поля
