--- a/modules/BackOffice-ObjectModel-Powers/pages/PowersPowerOfAttorneyFormat_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowersPowerOfAttorneyFormat_CL.adoc
@@ -18,8 +18,8 @@ public class PowersPowerOfAttorneyFormat : ObjectBase
 |===
 |Имя |Описание
 
-|`Name` |Имя.
-|`ProviderTypeName` |Название типа провайдера.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Name]` |Имя.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[ProviderTypeName]` |Название типа провайдера.
 |===
 
 == Поля
