--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/FindPowerOfAttorneyCardsResultsItem_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/FindPowerOfAttorneyCardsResultsItem_CL.adoc
@@ -18,7 +18,7 @@ public class FindPowerOfAttorneyCardsResultsItem
 |===
 |Имя |Описание
 
-|`InstanceID` |Идентификатор системной карточки доверенности
-|`PowerOfAttorneyNumber` |Номер доверенности
-|`PowerOfAttorneyStartDate` |Дата совершения доверенности
+|`http://msdn.microsoft.com/ru-ru/library/system.guid.aspx[InstanceID]` |Идентификатор системной карточки доверенности
+|`http://msdn.microsoft.com/ru-ru/library/system.guid.aspx[PowerOfAttorneyNumber]` |Номер доверенности
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[PowerOfAttorneyStartDate]` |Дата совершения доверенности
 |===
