--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/ILongProcessManager_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/ILongProcessManager_IN.adoc
@@ -17,8 +17,8 @@ public interface ILongProcessManager : IMessageLogger
 [cols=",",options="header"]
 |===
 |Имя |Описание
-|`CancellationPending` |Возвращает значение, показывающее, запросило ли приложение отмену фоновой операции.
-|`PausePending` |Возвращает значение, показывающее, запросило ли приложение приостановку фоновой операции.
+|`http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[CancellationPending]` |Возвращает значение, показывающее, запросило ли приложение отмену фоновой операции.
+|`http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[PausePending]` |Возвращает значение, показывающее, запросило ли приложение приостановку фоновой операции.
 |===
 
 == Методы
