--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyDigest_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyDigest_CL.adoc
@@ -18,7 +18,8 @@ public class PowerOfAttorneyDigest
 |===
 |Имя |Описание
 
-|`Id` |Идентификатор доверенности.
-|`DisplayString` |Отображаемое имя доверенности.
+|`http://msdn.microsoft.com/ru-ru/library/system.guid.aspx[Id]` |Идентификатор доверенности.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[DisplayString]` |Отображаемое имя доверенности.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRegTransferStatuses_EN.adoc[RegTransferStatus]` |Статус регистрации доверенности в ФНС.
 |===
 
