--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.AddressInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.AddressInfo_CL.adoc
@@ -18,8 +18,8 @@ public sealed class AddressInfo
 |===
 |Имя |Описание
 
-|`SubjectOfRussia` |Субъект Российской Федерации
-|`FiasCode` |Идентификатор адреса по ФИАС
-|`Address` |Адрес в Российской Федерации
-|`FiasAddress` |ФИАС адрес в Российской Федерации
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[SubjectOfRussia]` |Субъект Российской Федерации
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[FiasCode]` |Идентификатор адреса по ФИАС
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Address]` |Адрес в Российской Федерации
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[FiasAddress]` |ФИАС адрес в Российской Федерации
 |===
