--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.BranchOfRussianEntityInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.BranchOfRussianEntityInfo_CL.adoc
@@ -18,6 +18,6 @@ public sealed class BranchOfRussianEntityInfo
 |===
 |Имя |Описание
 
-|`FilialInfo` |Сведения о филиале (обособленном подразделении) юридического лица
-|`Manager` |Сведения о руководителе филиала (обособленном подразделении) юридического лица
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.LegalEntityInfo_CL.adoc[FilialInfo]` |Сведения о филиале (обособленном подразделении) юридического лица
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.SoleExecutiveIndividualInfo_CL.adoc[Manager]` |Сведения о руководителе филиала (обособленном подразделении) юридического лица
 |===
