--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.ConfirmationOfAuthorityDocument_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.ConfirmationOfAuthorityDocument_CL.adoc
@@ -18,8 +18,8 @@ public sealed class ConfirmationOfAuthorityDocument
 |===
 |Имя |Описание
 
-|`DocumentName` |Наименование документа
-|`IssueDate` |Дата выдачи документа
-|`Issuer` |Наименование органа, выдавшего документ
-|`IdentityOfDocument` |Сведения об удостоверении документа
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[DocumentName]` |Наименование документа
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[IssueDate]` |Дата выдачи документа
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Issuer]` |Наименование органа, выдавшего документ
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[IdentityOfDocument]` |Сведения об удостоверении документа
 |===
