--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.FIO_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.FIO_CL.adoc
@@ -18,7 +18,7 @@ public sealed class FIO
 |===
 |Имя |Описание
 
-|`LastName` |Фамилия
-|`FirstName` |Имя
-|`MiddleName` |Отчество (при наличии)
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[LastName]` |Фамилия
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[FirstName]` |Имя
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[MiddleName]` |Отчество (при наличии)
 |===
