--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.ForeignEntityInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.ForeignEntityInfo_CL.adoc
@@ -18,17 +18,18 @@ public sealed class ForeignEntityInfo
 |===
 |Имя |Описание
 
-|`ParticipantStatus` |Статус участника нотариального действия
-|`Name` |Наименование иностранного юридического лица / филиала (аккредитованного представительства) иностранного юридического лица
-|`Inn` |ИНН иностранного юридического лица / филиала (аккредитованного представительства) иностранного юридического лица
-|`Kpp` |КПП филиала (аккредитованного представительства) иностранного юридического лица
-|`AccreditationRecordNumber` |Номер записи об аккредитации
-|`RegistrationCountry` |Страна регистрации (инкорпорации)
-|`RegisteringAuthorityName` |Наименование регистрирующего органа
-|`RegNumber` |Регистрационный номер в стране регистрации (инкорпорации)
-|`TaxpayerCode` |Код налогоплательщика в стране регистрации (инкорпорации) или аналог
-|`Phone` |Контактный телефон
-|`EMail` |Адрес электронной почты
-|`LegalAddress` |Адрес юридического лица на территории государства, в котором оно зарегистрировано
-|`ActualAddress` |Адрес (место нахождения) на территории Российской Федерации
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.NotarialActionParticipantStatus_EN.adoc[ParticipantStatus]` |Статус участника нотариального действия
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Name]` |Наименование иностранного юридического лица / филиала (аккредитованного представительства) иностранного юридического лица
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]` |ИНН иностранного юридического лица / филиала (аккредитованного представительства) иностранного юридического лица
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Kpp]` |КПП филиала (аккредитованного представительства) иностранного юридического лица
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[AccreditationRecordNumber]` |Номер записи об аккредитации
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[RegistrationCountry]` |Страна регистрации (инкорпорации)
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[RegisteringAuthorityName]` |Наименование регистрирующего органа
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[RegNumber]` |Регистрационный номер в стране регистрации (инкорпорации)
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[TaxpayerCode]` |Код налогоплательщика в стране регистрации (инкорпорации) или аналог
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Phone]` |Контактный телефон
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[EMail]` |Адрес электронной почты
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[LegalAddress]` |Адрес юридического лица на территории государства, в котором оно зарегистрировано
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.AddressInfo_CL.adoc[ActualAddress]` |Адрес (место нахождения) на территории Российской Федерации
+
 |===
