--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.HandwrittenSignature_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.HandwrittenSignature_CL.adoc
@@ -18,9 +18,9 @@ public sealed class HandwrittenSignature
 |===
 |Имя |Описание
 
-|`PdfDocumentHash` |Хеш PDF документа
-|`SignatureImage` |Изображение подписи
-|`SignatureHash` |Хеш подписи
-|`SignatureDate` |Дата и время подписи
-|`Fio` |ФИО лица, подписавшего доверенность
+|`http://msdn.microsoft.com/ru-ru/library/system.byte.aspx[PdfDocumentHash]` |Хеш PDF документа
+|`http://msdn.microsoft.com/ru-ru/library/system.byte.aspx[SignatureImage]` |Изображение подписи
+|`http://msdn.microsoft.com/ru-ru/library/system.byte.aspx[SignatureHash]` |Хеш подписи
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[SignatureDate]` |Дата и время подписи
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.FIO_CL.adoc[Fio]` |ФИО лица, подписавшего доверенность
 |===
