--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.IdentityCardOfIndividual_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.IdentityCardOfIndividual_CL.adoc
@@ -18,10 +18,10 @@ public sealed class IdentityCardOfIndividual
 |===
 |Имя |Описание
 
-|`DocumentKindCode` |Код вида документа
-|`DocumentSerialNumber` |Серия и номер документа
-|`IssueDate` |Дата выдачи документа
-|`Issuer` |Наименование органа, выдавшего документ
-|`IssuerCode` |Код подразделения органа, выдавшего документ
-|`ExpDate` |Дата истечения срока действия документа, удостоверяющего личность
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[DocumentKindCode]` |Код вида документа
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[DocumentSerialNumber]` |Серия и номер документа
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[IssueDate]` |Дата выдачи документа
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Issuer]` |Наименование органа, выдавшего документ
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[IssuerCode]` |Код подразделения органа, выдавшего документ
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[ExpDate]` |Дата истечения срока действия документа, удостоверяющего личность
 |===
