--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.IndividualInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.IndividualInfo_CL.adoc
@@ -18,15 +18,15 @@ public sealed class IndividualInfo
 |===
 |Имя |Описание
 
-|`Gender` |Пол физического лица
-|`CitizenshipType` |Признак наличия гражданства
-|`UnifiedPopulationRegisterNumber` |Номер записи единого регистра населения
-|`BirthDate` |Дата рождения
-|`BirthPlace` |Место рождения
-|`Citizenship` |Гражданство
-|`ContactPhone` |Контактный телефон
-|`EMail` |Адрес электронной почты
-|`Fio` |ФИО доверителя (или представителя)
-|`ResidenceAddress` |Адрес места жительства
-|`IdentityCard` |Сведения о документе, удостоверяющем личность физического лица
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.Gender_EN.adoc[Gender]` |Пол физического лица
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.CitizenshipType_EN.adoc[CitizenshipType]` |Признак наличия гражданства
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[UnifiedPopulationRegisterNumber]` |Номер записи единого регистра населения
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[BirthDate]` |Дата рождения
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[BirthPlace]` |Место рождения
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Citizenship]` |Гражданство
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[ContactPhone]` |Контактный телефон
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[EMail]` |Адрес электронной почты
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.FIO_CL.adoc[Fio]` |ФИО доверителя (или представителя)
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.AddressInfo_CL.adoc[ResidenceAddress]` |Адрес места жительства
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.IdentityCardOfIndividual_CL.adoc[IdentityCard]` |Сведения о документе, удостоверяющем личность физического лица
 |===
