--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.IndividualPrincipalInfo1_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.IndividualPrincipalInfo1_CL.adoc
@@ -18,10 +18,10 @@ public sealed class IndividualPrincipalInfo1
 |===
 |Имя |Описание
 
-|`ParticipantStatus` |Статус участника нотариального действия
-|`ApplicantExist` |Признак наличия рукоприкладчика
-|`Inn` |ИНН физического лица
-|`Snils` |СНИЛС
-|`ApplicantInfo` |Сведения о рукоприкладчике
-|`IndividualInfo` |Сведения о физическом лице
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.NotarialActionParticipantStatus_EN.adoc[ParticipantStatus]` |Статус участника нотариального действия
+|`http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[ApplicantExist]` |Признак наличия рукоприкладчика
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]` |ИНН физического лица
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Snils]` |СНИЛС
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.SoleExecutiveIndividualInfo_CL.adoc[ApplicantInfo]` |Сведения о рукоприкладчике
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.IndividualInfo_CL.adoc[IndividualInfo]` |Сведения о физическом лице
 |===
