--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.IndividualPrincipalInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.IndividualPrincipalInfo_CL.adoc
@@ -18,12 +18,12 @@ public sealed class IndividualPrincipalInfo
 |===
 |Имя |Описание
 
-|`ParticipantStatus` |Статус участника нотариального действия
-|`HasFullCapacity` |Признак наличия полной гражданской дееспособности доверителя
-|`ApplicantExist` |Признак наличия рукоприкладчика
-|`DocumentOfIncapacity` |Документ, подтверждающий недееспособность доверителя
-|`Inn` |ИНН физического лица
-|`Snils` |СНИЛС
-|`IndividualInfo` |Сведения о физическом лице
-|`RepresentativeInfo` |Сведения о законном представителе физического лица / Сведения о рукоприкладчике
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.NotarialActionParticipantStatus_EN.adoc[ParticipantStatus]` |Статус участника нотариального действия
+|`http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[HasFullCapacity]` |Признак наличия полной гражданской дееспособности доверителя
+|`http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[ApplicantExist]` |Признак наличия рукоприкладчика
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[DocumentOfIncapacity]` |Документ, подтверждающий недееспособность доверителя
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]` |ИНН физического лица
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Snils]` |СНИЛС
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.IndividualInfo_CL.adoc[IndividualInfo]` |Сведения о физическом лице
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.RepresentativeInfo_CL.adoc[RepresentativeInfo]` |Сведения о законном представителе физического лица / Сведения о рукоприкладчике
 |===
