--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.IrrevocablePowerOfAttorneyInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.IrrevocablePowerOfAttorneyInfo_CL.adoc
@@ -18,7 +18,7 @@ public sealed class IrrevocablePowerOfAttorneyInfo
 |===
 |Имя |Описание
 
-|`RevocationPossibleType` |Признак передоверия безотзывной доверенности
-|`RevocationCondition` |Условие отзыва безотзывной доверенности
-|`RevocationConditionDescription` |Описание условия отзыва безотзывной доверенности
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.RevocationPossibleType_EN.adoc[RevocationPossibleType]` |Признак передоверия безотзывной доверенности
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.RevocationCondition_EN.adoc[RevocationCondition]` |Условие отзыва безотзывной доверенности
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[RevocationConditionDescription]` |Описание условия отзыва безотзывной доверенности
 |===
