--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.LegalEntityInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.LegalEntityInfo_CL.adoc
@@ -18,7 +18,7 @@ public sealed class LegalEntityInfo
 |===
 |Имя |Описание
 
-|`ParticipantStatus` |Статус участника нотариального действия
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.NotarialActionParticipantStatus_EN.adoc[ParticipantStatus]` |Статус участника нотариального действия
 |`Name` |Наименование юридического лица / Наименование филиала (обособленного подразделения) юридического лица
 |`Inn` |ИНН юридического лица / филиала (обособленного подразделения) юридического лица
 |`Kpp` |КПП юридического лица / филиала (обособленного подразделения) юридического лица
@@ -27,6 +27,6 @@ public sealed class LegalEntityInfo
 |`ConstituentDocument` |Контактный телефон
 |`Phone` |Адрес электронной почты
 |`EMail` |Документ, подтверждающий полномочия лица, действующего без доверенности
-|`ConfirmationOfAuthorityDocument` |Адрес юридического лица / филиала (обособленного подразделения) юридического лица в Российской Федерации
-|`LegalAddress` |
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.ConfirmationOfAuthorityDocument_CL.adoc[ConfirmationOfAuthorityDocument]` |Адрес юридического лица / филиала (обособленного подразделения) юридического лица в Российской Федерации
+|`LegalAddress` |Юридический адрес
 |===
