--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.MachineReadablePowerRestrictions_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.MachineReadablePowerRestrictions_CL.adoc
@@ -18,10 +18,10 @@ public sealed class MachineReadablePowerRestrictions
 |===
 |Имя |Описание
 
-|`RestrictionsIndex` |Порядковый номер ограничения
-|`RestrictionsCode` |Код ограничения
-|`RestrictionsName` |Наименование ограничения
-|`RestrictionsText` |Текстовое значение для ограничения
-|`RestrictionsCodeValue` |Код значения для ограничения
-|`RestrictionsCodeValueName` |Наименование значения для ограничения
+|`http://msdn.microsoft.com/ru-ru/library/system.int32.aspx[RestrictionsIndex]` |Порядковый номер ограничения
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[RestrictionsCode]` |Код ограничения
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[RestrictionsName]` |Наименование ограничения
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[RestrictionsText]` |Текстовое значение для ограничения
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[RestrictionsCodeValue]` |Код значения для ограничения
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[RestrictionsCodeValueName]` |Наименование значения для ограничения
 |===
