--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.MachineReadablePowersInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.MachineReadablePowersInfo_CL.adoc
@@ -18,6 +18,6 @@ public sealed class MachineReadablePowersInfo
 |===
 |Имя |Описание
 
-|`PowersCode` |Код полномочия
-|`Restrictions` |Сведения об ограничении (ограничениях) к полномочию
+|`xref:BackOffice-ObjectModel-Powers:PowersCode_CL.adoc[PowersCode]` |Код полномочия
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.MachineReadablePowerRestrictions_CL.adoc[Restrictions]` |Сведения об ограничении (ограничениях) к полномочию
 |===
