--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.NotaryCertificateInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.NotaryCertificateInfo_CL.adoc
@@ -18,18 +18,18 @@ public sealed class NotaryCertificateInfo
 |===
 |Имя |Описание
 
-|`Place` |Место совершения доверенности
-|`FromPrincipalToEPGU` |Направление сформированного электронного документа в ЛК доверителя на сайте ЕПГУ
-|`FromAttorneyToEPGU` |Направление сформированного электронного документа в ЛК поверенного на сайте ЕПГУ
-|`FromDeclarantToFNP` |Направление сформированного электронного документа в ЛК заявителя на сайте ФНП
-|`FromAttorneyToFNP` |Направление сформированного электронного документа в ЛК поверенного на сайте ФНП
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Place]` |Место совершения доверенности
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[FromPrincipalToEPGU]` |Направление сформированного электронного документа в ЛК доверителя на сайте ЕПГУ
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[FromAttorneyToEPGU]` |Направление сформированного электронного документа в ЛК поверенного на сайте ЕПГУ
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[FromDeclarantToFNP]` |Направление сформированного электронного документа в ЛК заявителя на сайте ФНП
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[FromAttorneyToFNP]` |Направление сформированного электронного документа в ЛК поверенного на сайте ФНП
 |`NotaryPaymentPaid` |Сведения об уплате за совершение нотариального действия
 |`NotaryPaymentDiscount` |Предоставленная льгота на сумму
-|`ElectronicDocumentTransferMethod` |Способ выдачи электронного нотариального документа
-|`OtherDocumentTransferMethod` |Иной способ выдачи
-|`AdditionalInformation` |Дополнительные сведения
-|`OtherInformationOfAuthenticationInscription` |Иные сведения удостоверительной надписи
-|`NotaryInfo` |Сведения о нотариусе, совершившем нотариальное действие
-|`HandwrittenSignature` |Рукописная подпись
-|`NotaryDeputyInfo` |ВРИО нотариуса
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[ElectronicDocumentTransferMethod]` |Способ выдачи электронного нотариального документа
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[OtherDocumentTransferMethod]` |Иной способ выдачи
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[AdditionalInformation]` |Дополнительные сведения
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[OtherInformationOfAuthenticationInscription]` |Иные сведения удостоверительной надписи
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.NotaryInfo_CL.adoc[NotaryInfo]` |Сведения о нотариусе, совершившем нотариальное действие
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.HandwrittenSignature_CL.adoc[HandwrittenSignature]` |Рукописная подпись
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.NotaryDeputyInfo_CL.adoc[NotaryDeputyInfo]` |ВРИО нотариуса
 |===
