--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.NotaryDeputyInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.NotaryDeputyInfo_CL.adoc
@@ -18,7 +18,7 @@ public sealed class NotaryDeputyInfo
 |===
 |Имя |Описание
 
-|`Position` |Должность
-|`RegistrationNumber` |Регистрационный номер лица, сдавшего квалификационный экзамен в Минюсте
-|`Fio` |ФИО ВРИО нотариуса
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Position]` |Должность
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[RegistrationNumber]` |Регистрационный номер лица, сдавшего квалификационный экзамен в Минюсте
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.FIO_CL.adoc[Fio]` |ФИО ВРИО нотариуса
 |===
