--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.NotaryInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.NotaryInfo_CL.adoc
@@ -18,7 +18,7 @@ public sealed class NotaryInfo
 |===
 |Имя |Описание
 
-|`Position` |Должность
-|`RegistrationNumber` |Регистрационный номер нотариуса в Минюсте
-|`Fio` |ФИО нотариуса
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Position]` |Должность
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[RegistrationNumber]` |Регистрационный номер нотариуса в Минюсте
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.FIO_CL.adoc[Fio]` |ФИО нотариуса
 |===
