--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.PowerOfAttorneyDocument_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.PowerOfAttorneyDocument_CL.adoc
@@ -18,8 +18,8 @@ public sealed class PowerOfAttorneyDocument
 |===
 |Имя |Описание
 
-|`KND` |Код формы по КНД
-|`PowerOfAttorneyData` |Доверенность
-|`RetrustPowerOfAttorneyData` |Передоверие
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[KND]` |Код формы по КНД
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyData_CL.adoc[PowerOfAttorneyData]` |Доверенность
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.RetrustPowerOfAttorneyDocumentData_CL.adoc[RetrustPowerOfAttorneyData]` |Передоверие
 
 |===
