--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVBBData.IdentityCardOfIndividual_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVBBData.IdentityCardOfIndividual_CL.adoc
@@ -19,7 +19,7 @@ public class IdentityCardOfIndividual
 |Имя |Описание
 
 |`IdentityCardOfIndividual(DocumentKindCode, string, DateTime,
-string, string)`
+ё   string, string)`
 |Сведения о документе, удостоверяющем личность физического лица (УдЛичнФЛТип)
 
 .Параметры:
