--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.IndividualInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.IndividualInfo_CL.adoc
@@ -18,12 +18,12 @@ public class IndividualInfo
 |===
 |Имя |Описание
 
-|`Inn` |ИНН физического лица.
-|`Ogrnip` |ОГРНИП (Обязательный с условием). Обязателен, если лицо является индивидуальным предпринимателем.
-|`Snils` |СНИЛС (Обязательный).
-|`Citizenship` |Гражданство. Принимает значение в соответствии с Общероссийским классификатором стран мира.
-|`BirthDate` |Дата рождения.
-|`Fio` |Фамилия, имя, отчество физического лица (Обязательный).
-|`IdentityCard` |Сведения о документе, удостоверяющем личность физического лица (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]` |ИНН физического лица.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Ogrnip]` |ОГРНИП (Обязательный с условием). Обязателен, если лицо является индивидуальным предпринимателем.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Snils]` |СНИЛС (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Citizenship]` |Гражданство. Принимает значение в соответствии с Общероссийским классификатором стран мира.
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[BirthDate]` |Дата рождения.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Fio]` |Фамилия, имя, отчество физического лица (Обязательный).
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.IdentityCardInfo_CL.adoc[IdentityCard]` |Сведения о документе, удостоверяющем личность физического лица (Обязательный).
 
 |===
