--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.RussianCompanyInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.RussianCompanyInfo_CL.adoc
@@ -18,9 +18,10 @@ public class RussianCompanyInfo
 |===
 |Имя |Описание
 
-|`Name` |Наименование организации (Обязательный).
-|`Inn` |ИНН организации (Обязательный).
-|`Kpp` |КПП организации (Обязательный).
-|`Ogrn` |ОГРН (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[IName]` |Наименование организации (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[IInn]` |ИНН организации (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[IKpp]` |КПП организации (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[IOgrn]` |ОГРН (Обязательный).
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.PrincipalWithoutPowerOfAttorneyInfo_CL.adoc[PrincipalWithoutPowerOfAttorney]` |Сведения о лице, действующем от имени юридического лица без доверенности (Обязательный).
 
 |===
