--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.PrincipalInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.PrincipalInfo_CL.adoc
@@ -21,5 +21,5 @@ public sealed class PrincipalInfo
 |`RussianEntity` |Сведения о юридическом лице
 |`ForeignLegalEntityPrincipal` |Сведения об иностранном юридическом лице
 |`SoleProprietorPrincipal` |Сведения об индивидуальном предпринимателе
-|`Individual` |Сведения о физическом лице
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.IndividualInfo_CL.adoc[Individual]` |Сведения о физическом лице
 |===
