--- a/modules/ROOT/partials/bo-om-services-entities.adoc
+++ b/modules/ROOT/partials/bo-om-services-entities.adoc
@@ -26,9 +26,11 @@
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.AddressInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.BranchOfRussianEntityInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.ConfirmationOfAuthorityDocument_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.DelegatedAuthorityPrincipalsInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.DelegatedPowerOfAttorneyPrincipal_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.FIO_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.ForeignEntityInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.ForeignLegalEntityPrincipalInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.HandwrittenSignature_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.IndividualInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.IndividualPrincipalInfo1_CL.adoc[]
@@ -43,13 +45,21 @@
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.NotaryInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.PowerOfAttorneyDocument_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.PowerOfAttorneyDocumentData_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.PrimaryPowerOfAttorneyInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.PrimaryPowerOfAttorneyPrincipal_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.PrimaryPowerOfAttorneyPrincipalInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.PowerOfAttorneyInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.PrincipalInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.PrincipalsInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.PrincipalWithoutPowerOfAttorneyInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.RepresentativeInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.RepresentativesInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.RetrustPowerOfAttorneyDocumentData_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.RepresentativePowersInfo_CL.adoc[]
-******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.RepresentativesInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.RussianLegalEntityPrincipalInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.SoleExecutiveIndividualInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.SoleExecutiveManagementCompanyInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.SoleProprietorInfo0_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.AuthorityType_EN.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.CitizenshipType_EN.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.EntityType_EN.adoc[]
@@ -65,6 +75,7 @@
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.RevocationCondition_EN.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.RevocationPossibleType_EN.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.SoleExecutiveAuthorityType_EN.adoc[]
+
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSData_CL.adoc[]
 
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData_CL.adoc[]
